[tool.poetry]
name = "pycounts-charlotter1277"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Charlotte Ren <charlotter1277@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pycounts", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
